fixed the form layout issue

--- a/src/app/construccion/construccion.component.css
+++ b/src/app/construccion/construccion.component.css
@@ -20,7 +20,7 @@ html{
   }
   .right{
       
-    display : flex;
+    /* display : flex; */
     justify-content : center;
     align-items : center;
     background-color:#FFF;
@@ -35,11 +35,4 @@ html{
       height:50%
     }
   }
-  .about{
-    display : flex;
-    justify-content : center;
-    align-items : center;
-    background-color:#000;
-    color : #FFF;
-    height:100%
-  }
+  
